# Marvin

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  Command.cpp  Command.h  InputHandler.cpp  InputHandler.h  LICENSE  Marvin.cpp  Marvin.h  Marvin.sln  Marvin.vcxproj  Marvin.vcxproj.filters  Menu.cpp  Menu.h  README.md  Robot.cpp  Robot.h  RobotAssembly.h  RobotCommandHandler.cpp  RobotCommandHandler.h  RobotGrid.cpp  RobotGrid.h  RobotSimulator.cpp  RobotSimulator.h  RobotWorld.cpp  RobotWorld.h  Utils.h  main.cpp
.github/upgrades/scenarios/cppbuildtoolsupgrade_a6e392/: scenario.json
.github/workflows/: ci.yml  linux.yml  macos.yml  windows.yml
RobotSimulatorTest/: RobotSimulatorTest.vcxproj  TestCommandParser.cpp  TestRobotGrid.cpp  TestRobotMarvin.cpp  TestRobotSimulator.cpp
include/marvin/command/: Command.h
include/marvin/robot/: Marvin.h  RobotAssembly.h
include/marvin/simulator/: Menu.h  RobotGrid.h  RobotSimulator.h
src/: main.cpp
src/command/: Command.cpp
src/robot/: Marvin.cpp  Robot.cpp
src/simulator/: Menu.cpp  RobotGrid.cpp  RobotSimulator.cpp
tests/: TestCommandParser.cpp  TestRobotGrid.cpp  TestRobotMarvin.cpp  TestRobotSimulator.cpp
